// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the expected classes 1`] = `
<div>
  <div
    class="messageBubble
        containerStyle"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="header firstItem gangnamStyle"
    >
      this is the leading message
    </div>
    <div
      class=" optionItem"
    >
      <div
        class="firstChild"
      />
    </div>
    <div
      class=" optionItem"
    >
      <div
        class="secondChild"
      />
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="thirdChild"
      />
    </div>
  </div>
</div>
`;

exports[`renders the expected classes when there is no leading message 1`] = `
<div>
  <div
    class="messageBubble
        "
    data-testid="answer-bot-selection-message"
  >
    <div
      class="firstItem optionItem"
    >
      <div
        class="firstChild"
      />
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="secondChild"
      />
    </div>
  </div>
</div>
`;

exports[`renders the expected classes when there is only one child 1`] = `
<div>
  <div
    class="messageBubble
        containerStyle"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="header firstItem gangnamStyle"
    >
      this is the leading message
    </div>
    <div
      class=" lastItem optionItem"
    >
      <div
        class="onlyChild"
      />
    </div>
  </div>
</div>
`;
